--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,125 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+}
+
+body {
+    font-family: Lato, Helvetica Neue, Helvetica, sans-serif;
+    font-variant-ligatures: common-ligatures;
+    line-height: 1.67;
+    font-size: 14px;
+}
+
+div#main{
+    width: 100%;
+    height: 100%;
+}
+
+.toolbar {
+    display: flex;
+    justify-content: start;
+    padding: 8px 20px;
+    border-bottom: 1px solid #7e7e7e;
+    background-color: #2c2c2c;
+}
+
+.toolbar__button {
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 5px;
+    color: #b9b9b9;
+}
+
+.toolbar__button:hover {
+    background-color: #7e7e7e;
+    color: #ffffff;
+}
+
+.layout__panel {
+    position: absolute;
+    top: 47px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: calc(100% - 47px);
+    display: flex;
+}
+
+.editor {
+    flex-grow: 1;
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+}
+
+.CodeMirror {
+    width: 100%;
+    height: 100%;
+}
+
+/* .CodeMirror-line {
+    padding: 0 10px !important;
+} */
+
+
+.preview {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    padding: 15px 25px;
+    white-space: normal;
+    word-break: break-word;
+    word-wrap: break-word;
+    overflow-y: scroll;
+}
+
+.code-block {
+    position: relative;
+    border-radius: 7px;
+}
+
+.code-block:hover .clipboard{
+    display: block;
+}
+
+.clipboard {
+    position: absolute;
+    font-size: 28px;
+    color: #ffffff;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    display: none;
+}
+.clipboard:hover {
+    color: rgb(0, 132, 255);
+}
+
+.markdown-body .highlight pre,
+.markdown-body pre {
+    font-size: 100%;
+    background-color: rgb(40, 44, 52);
+}
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    width: 8px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #8f969b;
+    border-radius: 4px;
 }
