--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
     font-size: 14px;
 }
 
-div#main{
+div#main {
     width: 100%;
     height: 100%;
 }
@@ -29,6 +29,12 @@ div#main{
     padding: 8px 20px;
     border-bottom: 1px solid #7e7e7e;
     background-color: #2c2c2c;
+}
+
+.toolbar__group {
+    display: flex;
+    padding: 0 10px;
+    border-right: 2px solid #b9b9b9;
 }
 
 .toolbar__button {
@@ -72,7 +78,6 @@ div#main{
     padding: 0 10px !important;
 } */
 
-
 .preview {
     position: relative;
     width: 50%;
@@ -89,7 +94,7 @@ div#main{
     border-radius: 7px;
 }
 
-.code-block:hover .clipboard{
+.code-block:hover .clipboard {
     display: block;
 }
 
