--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@ body {
     font-size: 14px;
 }
 
+pre {
+    position: relative;
+}
+
 div#main {
     width: 100%;
     height: 100%;
@@ -74,10 +78,6 @@ div#main {
     height: 100%;
 }
 
-/* .CodeMirror-line {
-    padding: 0 10px !important;
-} */
-
 .preview {
     position: relative;
     width: 50%;
@@ -89,26 +89,50 @@ div#main {
     overflow-y: scroll;
 }
 
-.code-block {
-    position: relative;
-    border-radius: 7px;
-}
-
-.code-block:hover .clipboard {
-    display: block;
-}
-
 .clipboard {
     position: absolute;
-    font-size: 28px;
-    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: rgb(66, 73, 87);
     top: 10px;
     right: 10px;
+    padding: 8px;
+    background-color: #d4d4d4;
+    border-radius: 5px;
+    visibility: hidden;
+    display: flex;
     cursor: pointer;
-    display: none;
+    transition: all 0.3s;
 }
-.clipboard:hover {
-    color: rgb(0, 132, 255);
+
+pre:hover .clipboard {
+    visibility: visible;
+}
+
+.clipboard > * {
+    pointer-events: none;
+}
+
+.clipboard.tooltipped::after {
+    content: "Copied!";
+    position: absolute;
+    left: -75px;
+    color: rgb(40, 44, 52);
+    font-size: 12px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #d4d4d4;
+}
+.clipboard.tooltipped::before {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    left: -15px;
+    transform: rotate(45deg);
+    background-color: #d4d4d4;
 }
 
 .markdown-body .highlight pre,
